[package]
name = "blink"
version = "0.1.0"
edition = "2021"

[dependencies]
stuk-whitelist = { version = "0.1.0", path = "../program" }
axum = "0.7.5"
base64 = "0.22.1"
bincode = "1.3.3"
serde = "1.0.204"
serde_json = "1.0.120"
solana-client = "2.0.2"
solana-sdk = "2.0.2"
tokio = { version = "1.38.0", features = ["macros"] }
tower-http = { version = "0.5.2", features = ["cors"] }
anyhow = "1.0.86"
clap = { version = "4.5.9", features = ["cargo", "derive"] }
solana-cli-config = "2.0.2"
spl-associated-token-account = "4.0.0"

[[bin]]
name = "wl-blink"
path = "src/main.rs"
