[package]
name = "cli"
version = "0.1.0"
authors = ["Ser Frae <a@serfrae.com>"]
description = "CLI for the stuk-whitelist program made for the Superteam UK talent olympics"
edition = "2021"

[dependencies]
stuk-whitelist = { version = "0.1.0", path = "../program" }
anyhow = "1.0.86"
borsh = "1.5.1"
clap = { version = "4.5.9", features = ["cargo", "derive"] }
solana-cli-config = "2.0.2"
solana-program = "2.0.2"
solana-sdk = "2.0.2"
spl-associated-token-account = "4.0.0"
spl-token = "6.0.0"
chrono = "0.4.38"
solana-client = "2.0.2"
spl-token-2022 = "4.0.0"

[[bin]]
name = "stuk-wl"
path = "src/main.rs"

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"
tokio = {version = "1.38.0", features = ["full", "test-util"] }
